# Lineage_rust

./: .env.example  .gitignore  Cargo.toml
.agent/skills/backend-engineer/: SKILL.md
.agent/skills/devops-engineer/: SKILL.md
.agent/skills/game-designer/: SKILL.md
.agent/skills/narrative-designer/: SKILL.md
.agent/skills/technical-artist/: SKILL.md
.agents/rules/: game_rules
.agents/workflows/: Phase0_task_01_movement_mvp.md  Phase0_task_02_network_sync.md  Phase0_task_03_navmesh_ysorting.md  Phase0_task_04_combat_mvp.md  Phase0_task_05_enemy_ai.md  Phase0_task_06_ui_health_bars.md  Phase0_task_07_loot_inventory.md  Phase1_task_01_db_persistence.md  Phase1_task_02_advanced_combat_equip.md  Phase1_task_03_visual_polish.md  Phase2_task_01_world_spawners.md  Phase2_task_02_chat_system.md  Phase2_task_03_inventory_ui.md  Phase3_task_02_pathfinding_collisions.md  Phase3_task_03_status_consumables.md  Phase4_task_02_portals_maps.md  Phase4_task_03_quests_dialogue.md  Phase5_task_01_experience_leveling.md
client/: Cargo.toml
client/assets/textures/: README.md
client/src/: main.rs  network.rs
godot-client/: README.md  project.godot
godot-client/scenes/: Main.tscn
godot-client/scripts/: main.gd
migrations/: 001_initial_schema.sql  002_add_guilds.sql
server/: Cargo.toml
server/src/: db.rs  main.rs  map_data.rs  network.rs
server/src/systems/: ai.rs  chat.rs  combat.rs  drop.rs  equipment.rs  guild.rs  interaction.rs  item.rs  loot.rs  mod.rs  movement.rs  npc.rs  quest.rs  spawner.rs  spell.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol.rs
(+27 files in other folders)
