[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
crossbeam-channel = "0.5"
serde_json = "1.0"
shared = { path = "../shared" }
pathfinding = "4.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
